--- a/my-app/src/Components/portfolio.css
+++ b/my-app/src/Components/portfolio.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .allContainer {
@@ -9,6 +10,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(20deg, #ccc, #fff);;
 }
 
 .titleContainer{
@@ -162,9 +164,9 @@
     color: #54b3d6;
     margin: 0 -.25rem;
     padding: 0 .25rem;
-    transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
+    transition: color .2s ease-in-out, box-shadow .2s ease-in-out;
   }
 #hover:hover {
-    box-shadow: inset 400px 0 0 0 #54b3d6;
+    box-shadow: inset 1000px 0 0 0 #54b3d6;
     color: white;
 }
