--- a/my-app/my-app/src/Components/nav.css
+++ b/my-app/my-app/src/Components/nav.css
@@ -48,7 +48,7 @@ li {
 }
 
 .cover {
-    background-image: url('../assets/moss.jpg');
+    background-image: url('../../public/moss.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
