--- a/my-app/my-app/src/Components/home.css
+++ b/my-app/my-app/src/Components/home.css
@@ -12,11 +12,10 @@
 }
 
 .cover {
-    /* background-image: url('../assets/moss.jpg');
+    background-image: url('../../public/moss.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; */
-    background-color: black;
+    background-size: cover;
     height: 100vh;
     width: 100%;
     position: relative;
@@ -33,8 +32,12 @@
     overflow: hidden;
 }
 
+.name {
+    margin-bottom: 10vh;
+}
+
 .hi {
-    font-size: 10vw;
+    font-size: 7vw;
     color: white;
 }
 
@@ -43,7 +46,7 @@
     height: 85vh;
     display: grid;
     position: relative;
-    /* background: linear-gradient(to right, #ff7e5f, #feb47b); Replace colors with your desired gradient */
+    background: linear-gradient(to right, #ff7e5f, #feb47b); /* Replace colors with your desired gradient */
     z-index: 1;
     grid-template-columns: 1fr 2.5fr;
 }
@@ -68,46 +71,12 @@
 .photoContainer {
     border-radius: 50%;
     overflow: hidden;
-    width: 30vw;
-    height: 30vw;
-    background-image: url('../assets/IMG_3260.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4); /* Adding a subtle shadow */
-    transition: box-shadow 0.3s ease; /* Adding transition for smooth hover effect */
-    position: relative;
-}
-
-.photoContainer:hover {
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.6); /* Increasing shadow on hover for a lifted effect */
-    transform: translateY(-5px); /* Slightly lifting the container on hover */
-    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Adding transition for smooth hover effect */
-}
-
-@media screen and (max-width: 1000px) {
-    .photoContainer {
-        width: 50vw;
-        height: 50vw;
-    }
-
-    .idContainer {
-        height: 140vh;
-    }
-
-    .hi {
-        font-size: 20vw;
-    }
-
-    .hand {
-        opacity: 0%;
-    }
-
-    ExampleComponent {
-        font-size: 20vw;
+    width: 50%;
+    height: auto;
+    @media screen and (max-width: 1000px) {
+        width: 90%;
     }
 }
-
 
 .photoContainer img {
     max-width: 100%;
@@ -133,6 +102,16 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+}
+
+.world {
+    font-size: 4vw;
+}
+
+.emphasis {
+    font-weight: 1000;
+    font-size: 3/1vw;
+    font-style: oblique;
 }
 
 .aboutmeText {
