--- a/my-app/src/Components/footer.css
+++ b/my-app/src/Components/footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #333; 
+    background-color: black; 
     color: white; 
     padding: 20px; 
     text-align: center; 
