--- a/my-app/src/Components/portfolio.css
+++ b/my-app/src/Components/portfolio.css
@@ -10,7 +10,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(20deg, #ccc, #fff);;
+    background: darkslategrey;
 }
 
 .titleContainer{
@@ -77,7 +77,7 @@
 
 .title {
     font-size: 2vw;
-    color: black;
+    color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     @media screen and (max-width: 600px) {
         font-size: 20px;
@@ -161,7 +161,7 @@
 
 #hover {
     box-shadow: inset 0 0 0 0 #54b3d6;
-    color: #54b3d6;
+    color: white;
     margin: 0 -.25rem;
     padding: 0 .25rem;
     transition: color .2s ease-in-out, box-shadow .2s ease-in-out;
