--- a/my-app/my-app/src/Components/portfolio.css
+++ b/my-app/my-app/src/Components/portfolio.css
@@ -75,14 +75,14 @@
     text-align: center;
 }
 
-.title {
+/* .title {
     font-size: 2vw;
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     @media screen and (max-width: 600px) {
         font-size: 20px;
     }
-}
+} */
 
 .projectTitle {
     color: red;
